# test_opencv

./: CMakeLists.txt  main.cpp
include/: Consumer.h  FileLoader.h  imageSet.h
src/: Consumer.cpp  FileLoader.cpp  imageSet.cpp
